--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "ibs3",
-	"version": "3.3.5",
+	"version": "3.4.0",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev --host 0.0.0.0",
+		"dev": "bunx --bun vite dev --host 0.0.0.0",
 		"dev:backend": "nodemon --watch backend -e ts --exec \"ts-node ./backend/index.ts\"",
 		"dev:email-templates": "npx sass --watch ./emails/scss/style-test.sass ./build/css/style-test.css",
 		"dev:full": "concurrently \"npm run dev\" \"npm run dev:backend\"",
@@ -43,10 +43,9 @@
 		"@iconify/json": "^2.2.47",
 		"@iconify/svelte": "^3.1.4",
 		"@playwright/test": "^1.43.0",
-		"@sveltejs/adapter-auto": "^3.2.0",
-		"@sveltejs/adapter-node": "^5.0.1",
-		"@sveltejs/kit": "^2.22.2",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/adapter-node": "5.5.0",
+		"@sveltejs/kit": "^2.50.0",
+		"@sveltejs/vite-plugin-svelte": "3.1.2",
 		"@types/express": "^4.17.17",
 		"@types/markdown-it": "^12.2.3",
 		"@types/markdown-it-emoji": "^2.0.2",
@@ -56,15 +55,13 @@
 		"@types/spotify-web-api-node": "^5.0.7",
 		"@typescript-eslint/eslint-plugin": "^6.2.0",
 		"@typescript-eslint/parser": "^6.2.0",
-		"@vite-pwa/sveltekit": "^0.4.0",
+		"@vite-pwa/sveltekit": "1.1.0",
 		"bullmq": "^5.56.1",
 		"classnames": "^2.3.2",
 		"concurrently": "^7.6.0",
-		"dotenv": "^16.4.5",
 		"eslint": "^8.45.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.32.4",
-		"husky": "^8.0.3",
 		"ioredis": "^5.3.2",
 		"nodemon": "^3.0.1",
 		"postcss": "^8.4.31",
@@ -72,26 +69,29 @@
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.2",
 		"pretty-quick": "^4.0.0",
-		"prisma": "^5.16.1",
-		"sass": "^1.58.0",
-		"svelte": "^4.2.19",
+		"prisma": "^7.2.0",
+		"sass": "^1.97.2",
+		"scss": "^0.2.4",
+		"svelte": "4.2.20",
+		"svelte-adapter-bun": "^1.0.1",
 		"svelte-check": "^3.4.6",
 		"svelte-floating-ui": "^1.5.3",
-		"svelte-preprocess": "^5.1.3",
+		"svelte-preprocess": "^6.0.3",
 		"sveltekit-flash-message": "^2.2.1",
-		"sveltekit-superforms": "^1.8.0",
+		"sveltekit-superforms": "1.13.4",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
 		"tsx": "^4.7.2",
-		"typescript": "^5.4.4",
+		"typescript": "^5.9.3",
 		"unplugin-icons": "^0.16.1",
-		"vite": "^5.4.14",
+		"vite": "6.4.1",
 		"zod": "^3.22.4"
 	},
 	"type": "module",
 	"dependencies": {
 		"@auth/sveltekit": "^1.10.0",
-		"@prisma/client": "^5.16.1",
+		"@prisma/adapter-mariadb": "^7.2.0",
+		"@prisma/client": "7.2.0",
 		"@total-typescript/ts-reset": "^0.5.1",
 		"autoprefixer": "^10.4.14",
 		"csv-parser": "^3.0.0",
@@ -100,6 +100,7 @@
 		"express": "^4.21.2",
 		"filereader": "^0.10.3",
 		"gridfs-promise": "^6.3.10",
+		"husky": "^8.0.3",
 		"ics": "^3.7.6",
 		"markdown-it": "^13.0.1",
 		"markdown-it-emoji": "^2.0.2",
@@ -113,12 +114,19 @@
 		"next-auth": "^4.24.5",
 		"node-cache": "^5.1.2",
 		"sanitize-html": "^2.13.0",
-		"scss": "^0.2.4",
-		"sharp": "^0.32.6",
+		"sharp": "^0.34.5",
 		"simple-svelte-autocomplete": "^2.5.2",
 		"spotify-web-api-node": "^5.0.2",
 		"stream-to-async-iterator": "^1.0.0",
-		"svelte-modals": "^1.2.1",
+		"svelte-modals": "v1.2.0",
 		"xss": "^1.0.14"
+	},
+	"trustedDependencies": [
+		"@parcel/watcher",
+		"svelte-preprocess"
+	],
+	"patchedDependencies": {
+		"@sveltejs/kit@2.50.0": "patches/@sveltejs%2Fkit@2.50.0.patch",
+		"sveltekit-superforms@1.13.4": "patches/sveltekit-superforms@1.13.4.patch"
 	}
 }
