--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"@typescript-eslint/parser": "^6.2.0",
 		"@vite-pwa/sveltekit": "1.1.0",
 		"bullmq": "^5.56.1",
+		"bun-types": "^1.3.6",
 		"classnames": "^2.3.2",
 		"concurrently": "^7.6.0",
 		"eslint": "^8.45.0",
