--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
 		"@playwright/test": "^1.43.0",
 		"@sveltejs/adapter-node": "5.5.0",
 		"@sveltejs/kit": "^2.50.0",
-		"@sveltejs/vite-plugin-svelte": "3.1.2",
+		"@sveltejs/vite-plugin-svelte": "^6.2.4",
 		"@types/express": "^4.17.17",
 		"@types/markdown-it": "^12.2.3",
 		"@types/markdown-it-emoji": "^2.0.2",
@@ -57,37 +57,36 @@
 		"@typescript-eslint/eslint-plugin": "^6.2.0",
 		"@typescript-eslint/parser": "^6.2.0",
 		"@vite-pwa/sveltekit": "1.1.0",
-		"bullmq": "^5.56.1",
 		"bun-types": "^1.3.6",
 		"classnames": "^2.3.2",
 		"concurrently": "^7.6.0",
 		"eslint": "^8.45.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.32.4",
+		"eslint-plugin-svelte": "^3.14.0",
 		"ioredis": "^5.3.2",
 		"nodemailer": "^7.0.12",
 		"nodemon": "^3.0.1",
 		"postcss": "^8.4.31",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^3.2.5",
-		"prettier-plugin-svelte": "^3.2.2",
+		"prettier-plugin-svelte": "^3.4.1",
 		"pretty-quick": "^4.0.0",
 		"prisma": "7.3.0",
 		"sass": "^1.97.2",
 		"scss": "^0.2.4",
-		"svelte": "4.2.20",
+		"svelte": "^5.49.1",
 		"svelte-adapter-bun": "^1.0.1",
-		"svelte-check": "^3.4.6",
+		"svelte-check": "^4.3.6",
 		"svelte-floating-ui": "^1.5.3",
 		"svelte-preprocess": "^6.0.3",
-		"sveltekit-flash-message": "^2.2.1",
+		"sveltekit-flash-message": "^2.4.6",
 		"sveltekit-superforms": "1.13.4",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
 		"tsx": "^4.7.2",
 		"typescript": "^5.9.3",
 		"unplugin-icons": "^0.16.1",
-		"vite": "6.4.1",
+		"vite": "^7.3.1",
 		"zod": "^3.22.4"
 	},
 	"type": "module",
