--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ibs3",
-	"version": "3.4.0",
+	"version": "4.0.0",
 	"private": true,
 	"scripts": {
 		"dev": "bunx --bun vite dev --host 0.0.0.0",
@@ -44,7 +44,7 @@
 		"@iconify/svelte": "^3.1.4",
 		"@playwright/test": "^1.43.0",
 		"@sveltejs/adapter-node": "5.5.0",
-		"@sveltejs/kit": "^2.50.0",
+		"@sveltejs/kit": "^2.50.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
 		"@types/express": "^4.17.17",
 		"@types/markdown-it": "^12.2.3",
@@ -71,7 +71,7 @@
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.4.1",
 		"pretty-quick": "^4.0.0",
-		"prisma": "7.3.0",
+		"prisma": "^7.4.0",
 		"sass": "^1.97.2",
 		"scss": "^0.2.4",
 		"svelte": "^5.49.1",
@@ -80,28 +80,31 @@
 		"svelte-floating-ui": "^1.5.3",
 		"svelte-preprocess": "^6.0.3",
 		"sveltekit-flash-message": "^2.4.6",
-		"sveltekit-superforms": "1.13.4",
+		"sveltekit-superforms": "^2.29.1",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
 		"tsx": "^4.7.2",
 		"typescript": "^5.9.3",
 		"unplugin-icons": "^0.16.1",
 		"vite": "^7.3.1",
-		"zod": "^3.22.4"
+		"zod": "^4.3.6"
 	},
 	"type": "module",
 	"dependencies": {
 		"@auth/sveltekit": "^1.10.0",
 		"@aws-sdk/client-ses": "^3.972.0",
 		"@prisma/adapter-mariadb": "^7.2.0",
-		"@prisma/client": "7.3.0",
+		"@prisma/client": "^7.4.0",
 		"@total-typescript/ts-reset": "^0.5.1",
 		"autoprefixer": "^10.4.14",
+		"bufferutil": "^4.1.0",
 		"csv-parser": "^3.0.0",
 		"decimal.js": "^10.4.3",
+		"discord.js": "^14.25.1",
 		"dotenv": "^16.3.1",
 		"express": "^4.21.2",
 		"filereader": "^0.10.3",
+		"flatpickr": "^4.6.13",
 		"gridfs-promise": "^6.3.10",
 		"husky": "^8.0.3",
 		"ics": "^3.7.6",
@@ -122,15 +125,22 @@
 		"spotify-web-api-node": "^5.0.2",
 		"stream-to-async-iterator": "^1.0.0",
 		"svelte-email": "^0.0.4",
-		"svelte-modals": "v1.2.0",
-		"xss": "^1.0.14"
+		"svelte-modals": "^2.0.1",
+		"xss": "^1.0.14",
+		"zlib-sync": "^0.1.10"
 	},
 	"trustedDependencies": [
 		"@parcel/watcher",
-		"svelte-preprocess"
+		"@prisma/engines",
+		"bufferutil",
+		"esbuild",
+		"prisma",
+		"sharp",
+		"svelte-preprocess",
+		"zlib-sync"
 	],
 	"patchedDependencies": {
-		"@sveltejs/kit@2.50.0": "patches/@sveltejs%2Fkit@2.50.0.patch",
-		"sveltekit-superforms@1.13.4": "patches/sveltekit-superforms@1.13.4.patch"
+		"sveltekit-superforms@2.29.1": "patches/sveltekit-superforms@2.29.1.patch",
+		"sveltekit-flash-message@2.4.6": "patches/sveltekit-flash-message@2.4.6.patch"
 	}
 }
